@@ -1,3 +1,7 @@
+Thu Dec  4 21:32:37 1997  Tom Yu  <tlyu@mit.edu>
+
+	* telnetd.c (doit): Fix up slave buffer length.
+
 Thu Oct 23 13:59:32 1997  Theodore Y. Ts'o  <tytso@mit.edu>
 
 	* state.c (envvarok): Prohibit the passing of TERMCAP, TERMPATH,
